This is a big commit - adds everything changed

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,350 @@
-/*Main CSS*/
+* {
+	margin: 0;
+	padding: 0;
+	font-family: 'Dosis', sans-serif;
+	font-size: 14px;
+	box-sizing: border-box;
+}
 
+html {
+	width: 100%;
+	height: 100%;
+}
+body {	
+	width: 100%;
+}
+
+a, a:visited, a:hover {
+	text-decoration: none;
+}
+
+/*Variables*/
+:root {
+	--ph-white: #ffffff;
+	--ph-red: #CC172C;
+	--ph-yellow: #FBD036;
+	--ph-blue: #073CA5;
+}
+
+/*Standard CSS*/
+.border {
+	z-index: -5!important;
+}
+
+.border-yellow {
+	height: 1px;
+	/*width: 100%;*/
+	background-color: var(--ph-yellow);
+	opacity: .7;
+}
+.border-red {
+	height: 1px;
+	/*width: 100%;*/
+	background-color: var(--ph-red);
+	opacity: .7;
+}
+.border-blue {
+	height: 1px;
+	/*width: 100%;*/
+	background-color: var(--ph-blue);
+	opacity: .7;
+}
+
+.container {
+	position: absolute;
+	width: 100%;
+	margin-top: 75px;
+}
+
+.main-text, #gallery, #about {
+	margin: 125px auto 100px auto;
+	width: 80%;
+	max-width: 1000px;
+}
 
 /*Navigation*/
+nav {
+	position: fixed;
+	top: -75;
+	width: 100%!important;
+	height: 75px;
+	z-index: 400;
+	box-sizing: border-box;
+	padding: 15px 30px;
+	background-color: #222222;
+	opacity: .95;
+	color: var(--ph-yellow);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
 
+nav * {
+	text-transform: uppercase;
+}
+
+.brand {
+	flex: 2;
+}
+
+.logo .fa-sun {
+	z-index: 400!important;
+}
+.fa-sun {
+	/*position: fixed;
+	top: 14px;
+	left: 22px;*/
+	font-size: 33px;
+	text-shadow: 0 0 1px #666666;
+}
+
+.fa-sun, .fa-sun:visited {
+	color:  var(--ph-yellow);
+}
+
+.fa-sun:hover {
+	color:  var(--ph-blue);
+}
+
+.fa-star {
+	padding-right: 10px;
+	color: var(--ph-yellow);
+}
+
+.brand span {
+	/*position: relative;
+	top: 0;
+	left: -500px;*/
+	/*margin-left: 45px!important;*/
+	padding-left: 15px;
+	font-size: 25px;
+	font-weight: 800;
+	color: #ffffff;
+	letter-spacing: 4px;
+}
+
+nav ul {
+	flex: 1;
+	margin: 0;
+	max-width: 500px;
+	max-height: 75px;
+	box-sizing: border-box;
+	list-style: none;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+nav ul li a {
+	padding-left: 30px;
+	text-decoration: none;
+	text-align: center;
+	font-size: 1.3rem!important;
+	font-weight: 800!important;
+	letter-spacing: 2px;
+}
+
+nav ul li a:hover {
+	color: var(--ph-yellow)!important;
+}
+
+
+nav ul li:nth-child(1) a {
+	color:  var(--ph-white);
+}
+
+nav li:nth-child(2) a {
+	color:  var(--ph-blue);
+}
+
+nav li:nth-child(3) a {
+	color:  var(--ph-red);
+}
 
 /*Headline*/
+section#main {
+    width: 100%;
+	height: 500px;
+	background-image: url("../img/main-image.jpg");
+	background-size: cover;
+	background-position: center top!important;
+	background-repeat: no-repeat;
+    background-attachment: fixed;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-shadow: 1px 1px 1px rgba(20, 20, 20, .8);
+	color: #ffffff;
+}
 
+#main h1 {
+	font-size: 5rem;
+	font-weight: 800;
+	text-transform: uppercase;
+}
+
+#main p {
+	font-size: 2.5rem;
+	font-weight: 400;
+}
+
+.main-header, .main-text p {
+	padding-bottom: 30px;
+}
+
+.main-header {
+	padding-bottom: 40px;
+	text-align: center;
+	font-size: 3rem;
+	font-weight: 800;
+	text-transform: uppercase;
+}
+
+.main-text p {
+	font-family: arial, 'open sans';
+	font-size: 1.1rem;
+	font-weight: 200;
+	line-height: 170%;
+	letter-spacing: 1px;
+}
 
 /*Gallery*/
+#gallery {
+	display: flex;
+	flex-direction: column;
+}
+
+#gallery img {
+	margin: 0;
+	padding: 0;
+	border: 1px solid #dddddd;
+	border-radius: 6px;
+}
+
+.gallery-row {
+	margin-bottom: 45px!important;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
 
 
 /*About*/
+#about {
+	
+}
+
+.about-columns {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.about-columns ul{
+	list-style: none;
+}
+
+.about-column {
+	width: 310px;
+}
+
+.about-column h3 {
+	padding: 35px 0;
+	font-size: 24px;
+	font-weight: 800;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+.about-column p, .about-column li {
+	font-size: 18px;
+	font-weight: 400;
+}
+
+.about-column li {
+	padding-bottom: 10px;
+}
+
+/*Footer*/
+footer {
+	padding: 40px 0 70px 0;
+	background-color: #222222;
+	text-align: center;
+}
+
+
+
+
+/*EFFECTS*/
+
+/*Card Flip*/
+
+
+.card-container {
+  cursor: pointer;
+  height: 300px;
+  perspective: 600;
+  position: relative;
+  width: 300px;
+}
+
+.card {
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: all 1s ease-in-out;
+  width: 100%;
+}
+
+.card:hover {
+  transform: rotateY(180deg);
+}
+
+.card .side {
+  backface-visibility: hidden;
+  border-radius: 6px;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+}
+
+.card .back {
+  background: #222222;
+  color: #ffffff;
+  /*line-height: 150px;*/
+  text-align: center;
+  transform: rotateY(180deg);
+}
+
+.back {
+  padding: 15px 20px;
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.back .fa-star, .back h4 {
+	padding-bottom: 20px;
+}
+
+.back h3 {
+	color: var(--ph-blue);
+	font-size: 20px;
+	text-transform: uppercase;
+}
+
+.back h4 {
+	color: var(--ph-red);
+	font-size: 16px;
+}
+
+.back p {
+	color: #bdc3c7;
+	font-size: 14px;
+	font-weight: 200px;
+}
